--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.3",
     "react-redux": "^7.2.0",
     "react-responsive-spritesheet": "^2.3.9",
     "react-router-dom": "^6.0.2",
